<resources>
    <string name="app_name">Team Rocket - Bird Tracking</string>
    <string name="app_name_small">Bird Tracking</string>

    <string name="main_nav_home">Home</string>
    <string name="main_nav_map">Map</string>
    <string name="main_nav_categories">Categories</string>
    <string name="main_nav_search">Search</string>
    <string name="main_title_filter">Filter</string>
    <string name="main_nav_settings">Settings</string>

    <string name="home_add_sighting">Add Sighting</string>
    <string name="home_msg_no_sightings">You haven\'t added any bird sightings. Add one by tapping the button below.</string>
    <string name="home_msg_no_filters">No bird sightings match the given filter.</string>
    <string name="home_title_change_language">Change language</string>
    <string name="home_title_filter_sightings">Filter sightings</string>
    <string name="home_title_choose_categories">Choose categories</string>
    <string name="home_title_choose_date">Choose date</string>
    <string name="home_title_past_day">Past 24 hours</string>
    <string name="home_title_past_week">Past week</string>
    <string name="home_title_past_month">Past month</string>
    <string name="home_title_choose_location">Choose location</string>
    <string name="home_title_within_km">Within 1 KM</string>
    <string name="home_title_within_10_km">Within 10 KM</string>
    <string name="home_title_reset_filters">Reset all filters</string>
    <string name="home_msg_filter_location">To use the distance filters, please grant the location permission and have your GPS turned on.</string>
    <string name="home_title_delete">Delete</string>
    <string name="home_msg_delete">Are you sure you want to delete this sighting?</string>
    <string name="home_msg_share">Checkout this bird I found!</string>
    <string name="home_title_no_location">No Location</string>
    <string name="home_title_any_location">Any Location</string>
    <string name="home_msg_loc_filter_ignored">Distance filters are ignored because permission is denied or GPS is off.</string>

    <string name="map_gps_dialog_title">GPS is turned off</string>
    <string name="map_gps_dialog_message">You can still see your bird sighting history but your current location will not be displayed.</string>
    <string name="map_title_dismiss">Dismiss</string>
    <string name="map_title_show_in_list">Show in list</string>
    <string name="map_msg_banner">%1$d sightings with no location are not shown on the map.</string>

    <string name="title_add_sighting">Add Sighting</string>
    <string name="add_sighting_no_camera">There are no camera apps installed on your device.</string>
    <string name="add_sighting_image_file_error">There was an error while trying to take a photo.</string>
    <string name="add_sighting_title_select_category">Select category</string>
    <string name="add_sighting_title_add_category">Add new category</string>
    <string name="add_sighting_cat_name_empty">Can\'t add a category with an empty name</string>
    <string name="add_sighting_cat_name_exists">An existing category already has the name \'%1$s\'</string>
    <string name="add_sighting_title_category_name">Category name</string>
    <string name="add_sighting_select_location">Select location</string>
    <string name="add_sighting_select_datetime">Select date and time</string>
    <string name="add_sighting_title_location">Location</string>
    <string name="add_sighting_title_datetime">Date and time</string>
    <string name="add_sighting_title_bird_name">Bird name</string>
    <string name="add_sighting_title_more_info">More info</string>
    <string name="add_sighting_category">Bird category</string>
    <string name="add_sighting_title_save">Save</string>
    <string name="add_sighting_msg_fill_details">Please fill all the details</string>
    <string name="add_sighting_msg_offline">Network connection is not available</string>
    <string name="add_sighting_error_wiki">There was an error trying to get bird information</string>
    <string name="add_sighting_title_notes">Notes</string>
    <string name="add_sighting_read_on_wikipedia">Read on Wikipedia</string>

    <string name="settings_title_general">General</string>
    <string name="settings_title_add_locations">Disable location for future sightings</string>
    <string name="settings_title_auto_delete">Auto-delete bird sightings</string>
    <string name="settings_msg_auto_delete">Remove old sightings automatically after a certain amount of time</string>
    <string name="settings_title_export_data">Export bird sighting data</string>
    <string name="settings_title_other">Other</string>
    <string name="settings_msg_export_successful">Exported data successfully</string>
    <string name="settings_hint_auto_delete">(months)</string>

</resources>
