<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="8dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:padding="16dp"
        android:text="@string/home_title_choose_categories"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/cgCategories"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="16dp"
        android:paddingEnd="16dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:padding="16dp"
        android:text="@string/home_title_choose_date"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/cgDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        app:singleSelection="true">

        <com.google.android.material.chip.Chip
            android:id="@+id/filter_chip_day"
            style="@style/AppTheme.Chip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/home_title_past_day" />


        <com.google.android.material.chip.Chip
            android:id="@+id/filter_chip_week"
            style="@style/AppTheme.Chip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/home_title_past_week" />

        <com.google.android.material.chip.Chip
            android:id="@+id/filter_chip_month"
            style="@style/AppTheme.Chip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/home_title_past_month" />

    </com.google.android.material.chip.ChipGroup>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:padding="16dp"
        android:text="@string/home_title_choose_location"
        android:textColor="@color/gray_9"
        android:textSize="16sp" />

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/cgLocation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        app:singleSelection="true">

        <com.google.android.material.chip.Chip
            android:id="@+id/filter_chip_no_location"
            style="@style/AppTheme.Chip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/home_title_no_location" />

        <com.google.android.material.chip.Chip
            android:id="@+id/filter_chip_any_location"
            style="@style/AppTheme.Chip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/home_title_any_location" />

        <com.google.android.material.chip.Chip
            android:id="@+id/filter_chip_1_km"
            style="@style/AppTheme.Chip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/home_title_within_km" />

        <com.google.android.material.chip.Chip
            android:id="@+id/filter_chip_10_km"
            style="@style/AppTheme.Chip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/home_title_within_10_km" />

    </com.google.android.material.chip.ChipGroup>

    <LinearLayout
        android:id="@+id/dialog_filter_location_warning"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="@color/gray_2"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="16dp"
            android:paddingTop="16dp"
            android:src="@drawable/ic_location_24" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lineSpacingExtra="4dp"
            android:padding="16dp"
            android:text="@string/home_msg_filter_location" />


    </LinearLayout>

</LinearLayout>